@@ -20,4 +20,5 @@ Other:
 - Added make variables `CXXOPTS` and `LDOPTS` to extend existing `CXXFLAGS` and `LDFLAGS`.
 - Added make variables `CPPOPTS` to extend existing `CPPFLAGS`.
 - `CPPFLAGS` are not longer being passed to the linker command for `cppcheck` and `testrunner`.
+- Removed deprecated platforms `unix32-unsigned` and `unix64-unsigned`.
 -
